<resources>
    <string name="app_name">CasersApp</string>
    <string name="rationale_title">Camera access needed</string>
    <string name="rationale_desc">The main functionality of this application requires a camera to work</string>
    <string name="ok">OK</string>
    <string name="ready_from">READY FROM</string>
    <string name="car_number">CAR NUMBER</string>
    <string name="cargo_description">CARGO DESCRIPTION</string>
    <string name="waiting_cars_bottombar_title">Waiting Cars</string>
    <string name="parsed_cars_bottombar_title">Parsed Cars</string>
    <string name="validation_error">Validation error! Retry or type in manually</string>
    <string name="let_the_car_go">LET THE CAR GO</string>
    <string name="db_name">cars_db.db</string>
    <string name="dlete_car_snackbar_msg">Car successfully deleted</string>
    <string name="delete_article_snackbar_action">undo</string>
    <string name="article_saved_snackbar_msg">Car saved successfully</string>
    <string name="car_is_parsed">Parsed</string>
    <string name="not_supported">Not supported</string>
    <string name="car_number_template">Car number: %1$s</string>
    <string name="car_stop_waiting_template">Parsed at: %1$s</string>
    <string name="car_start_waiting_template">Ready from: %1$s</string>
    <string name="some_plombs_parsed">Plomb parsed: %1$d/%2$d</string>
    <string name="search_by_car_number">Search by car number…</string>
    <string name="type_in_plomb_num_msg">Enter plomb number</string>
    <string name="type_in_plomb_num_title">Plomb</string>
    <string name="type_in_lomb_confirm">Confirm</string>
    <string name="deny_type_in_plomb">Deny</string>
    <string name="type_in_manually">Type in</string>
    <string name="an_error_occured">An error occurred: </string>
    <string name="all_plomb_parsed_toast">All plombs parsed!</string>
    <string name="plomb_quantity">Plomb quantity: %1$d</string>
    <string name="retry">Retry</string>

</resources>