<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <Button
        android:id="@+id/bnLetCarGo"
        android:layout_width="165dp"
        android:layout_height="93dp"
        android:text="@string/let_the_car_go"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvReadyFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        tools:text="@string/ready_from"
        android:textColor="?attr/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bnLetCarGo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvCarNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:maxLines="3"
        tools:text="@string/car_number"
        android:textColor="?attr/textColor"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/bnLetCarGo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCargoDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:maxLines="5"
        tools:text="@string/cargo_description"
        android:textColor="?attr/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bnLetCarGo"
        app:layout_constraintTop_toBottomOf="@+id/tvCarNumber" />

    <TextView
        android:id="@+id/tvPlombQnt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="?attr/textColor"
        tools:text="@string/plomb_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bnLetCarGo"
        app:layout_constraintTop_toBottomOf="@+id/tvCargoDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>